fix: map width on small screens

--- a/fancy-weather/src/components/maps-here/maps-here.css
+++ b/fancy-weather/src/components/maps-here/maps-here.css
@@ -6,3 +6,10 @@
   mask-size: cover;
   overflow: hidden;
 }
+
+@media (max-width: 425px) {
+  .maps-here {
+    height: 95vw;
+    width: 90vw;
+  }
+}
