--- a/fancy-weather/src/components/maps/maps.css
+++ b/fancy-weather/src/components/maps/maps.css
@@ -11,12 +11,7 @@
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 2.6rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
   text-transform: capitalize;
-}
-
-@media (max-width: 425px) {
-  .maps-google {
-    height: 95vw;
-    width: 90vw;
-  }
 }
